FIX collapsed menù
Ora quando non si deseleziona una classe tutti i collapsed div in class-menu.component vengono chiusi;

--- a/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
+++ b/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
@@ -1,5 +1,6 @@
 .menu {
-  background-color: #EAEAF1;
+  background-color: #E0E0E0;
+   /*#EAEAF1;*/
   border-left: 1px solid black;
   border-bottom: 1px solid black;
   font-weight: bold;
